# hello_git

./: 109062123.html  index.html  student_id  test.html
allegro/: Makefile  main.c  main.out
allegro/Source/: Create_Window.c  Create_Window_Answer.c  Event_Loop.c  Event_Loop_Answer.c  Image_and_Text.c  Image_and_Text_Answer.c  Keyboard.c  Keyboard_Answer.c  Mouse.c  Mouse_Answer.c
allegro/lib/: liballegro.so.5.2  liballegro_acodec.so.5.2  liballegro_acodec.so.5.2.7  liballegro_audio.so.5.2  liballegro_audio.so.5.2.7  liballegro_color.so.5.2  liballegro_color.so.5.2.7  liballegro_dialog.so.5.2  liballegro_dialog.so.5.2.7  liballegro_font.so.5.2  liballegro_font.so.5.2.7  liballegro_image.so.5.2  liballegro_image.so.5.2.7  liballegro_main.so.5.2  liballegro_main.so.5.2.7  liballegro_memfile.so.5.2  liballegro_memfile.so.5.2.7  liballegro_physfs.so.5.2  liballegro_physfs.so.5.2.7  liballegro_primitives.so.5.2  liballegro_primitives.so.5.2.7  liballegro_ttf.so.5.2  liballegro_ttf.so.5.2.7  liballegro_video.so.5.2  liballegro_video.so.5.2.7
final/adtest/: Shooting Sgame.cbp  Shooting Sgame.depend  Shooting Sgame.layout  enemy_spawn.c  enemy_spawn.h  game.c  log.txt  scene_menu.c  scene_settings.c  scene_start.c  scene_start.h  shared.c  utility.c  utility.h
final/allegro/: allegro.cbp  allegro.depend  allegro.layout  game.c  log.txt  scene_menu.c  scene_settings.c  scene_start.c  utility.c
final/allegro-demo/: CMakeLists.txt  allegro-demo.cbp  allegro-demo.depend  allegro-demo.layout  game.c  game.h  log.txt  main.c  scene_gameover.c  scene_gamewin.c  scene_menu.c  scene_menu.h  scene_settings.h  scene_start.c  scene_start.h  utility.c  utility.h  疑問.txt
final/allegroRedemo/: allegro.depend  allegro.layout  game.c  game.h  log.txt  scene_gameover.c  scene_gamewin.c  scene_menu.c  scene_menu.h  scene_settings.c  scene_settings.h  scene_start.c  scene_start.h  shared.c  utility.c
final/allegrotmp/: allegro.cbp  allegro.depend  allegro.layout  game.c  game.h  log.txt  scene_gameover.c  scene_gamewin.c  scene_settings.c  scene_start.c  scene_start.h
final/simtest/: a final project.cbp  a final project.layout  log.txt  main.c
programingI_final/: allegro.cbp  allegro.cscope_file_list  allegro.depend  allegro.layout  allegro.vcxproj  allegro.vcxproj.filters  game.c  log.txt  move_function.c  move_function.h  queue.c  queue.h  scene_gameover.h  scene_gamewin.h  scene_menu.c  scene_settings.c  scene_start.c  shared.c
