cmake_minimum_required(VERSION 3.17)
project(allegro_demo C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(include)
include_directories(include/allegro5)
include_directories(include/allegro5/inline)
include_directories(include/allegro5/internal)
include_directories(include/allegro5/opengl)
include_directories(include/allegro5/opengl/GLext)
include_directories(include/allegro5/platform)

add_executable(allegro_demo
        include/allegro5/inline/fmaths.inl
        include/allegro5/internal/alconfig.h
        include/allegro5/opengl/GLext/gl_ext_alias.h
        include/allegro5/opengl/GLext/gl_ext_api.h
        include/allegro5/opengl/GLext/gl_ext_defs.h
        include/allegro5/opengl/GLext/gl_ext_list.h
        include/allegro5/opengl/GLext/glx_ext_alias.h
        include/allegro5/opengl/GLext/glx_ext_api.h
        include/allegro5/opengl/GLext/glx_ext_defs.h
        include/allegro5/opengl/GLext/glx_ext_list.h
        include/allegro5/opengl/GLext/wgl_ext_alias.h
        include/allegro5/opengl/GLext/wgl_ext_api.h
        include/allegro5/opengl/GLext/wgl_ext_defs.h
        include/allegro5/opengl/GLext/wgl_ext_list.h
        include/allegro5/opengl/gl_ext.h
        include/allegro5/platform/alandroid.h
        include/allegro5/platform/alandroidcfg.h
        include/allegro5/platform/albcc32.h
        include/allegro5/platform/aliphone.h
        include/allegro5/platform/aliphonecfg.h
        include/allegro5/platform/allegro_sdl_config.h
        include/allegro5/platform/almngw32.h
        include/allegro5/platform/almsvc.h
        include/allegro5/platform/alosx.h
        include/allegro5/platform/alosxcfg.h
        include/allegro5/platform/alplatf.h
        include/allegro5/platform/alraspberrypi.h
        include/allegro5/platform/alraspberrypicfg.h
        include/allegro5/platform/alucfg.h
        include/allegro5/platform/alunix.h
        include/allegro5/platform/alwatcom.h
        include/allegro5/platform/alwin.h
        include/allegro5/platform/astdbool.h
        include/allegro5/platform/astdint.h
        include/allegro5/alcompat.h
        include/allegro5/allegro.h
        include/allegro5/allegro5.h
        include/allegro5/allegro_acodec.h
        include/allegro5/allegro_audio.h
        include/allegro5/allegro_color.h
        include/allegro5/allegro_direct3d.h
        include/allegro5/allegro_font.h
        include/allegro5/allegro_image.h
        include/allegro5/allegro_memfile.h
        include/allegro5/allegro_native_dialog.h
        include/allegro5/allegro_opengl.h
        include/allegro5/allegro_physfs.h
        include/allegro5/allegro_primitives.h
        include/allegro5/allegro_ttf.h
        include/allegro5/allegro_video.h
        include/allegro5/allegro_windows.h
        include/allegro5/altime.h
        include/allegro5/base.h
        include/allegro5/bitmap.h
        include/allegro5/bitmap_draw.h
        include/allegro5/bitmap_io.h
        include/allegro5/bitmap_lock.h
        include/allegro5/blender.h
        include/allegro5/clipboard.h
        include/allegro5/color.h
        include/allegro5/config.h
        include/allegro5/cpu.h
        include/allegro5/debug.h
        include/allegro5/display.h
        include/allegro5/drawing.h
        include/allegro5/error.h
        include/allegro5/events.h
        include/allegro5/file.h
        include/allegro5/fixed.h
        include/allegro5/fmaths.h
        include/allegro5/fshook.h
        include/allegro5/fullscreen_mode.h
        include/allegro5/haptic.h
        include/allegro5/joystick.h
        include/allegro5/keyboard.h
        include/allegro5/keycodes.h
        include/allegro5/memory.h
        include/allegro5/monitor.h
        include/allegro5/mouse.h
        include/allegro5/mouse_cursor.h
        include/allegro5/path.h
        include/allegro5/render_state.h
        include/allegro5/shader.h
        include/allegro5/system.h
        include/allegro5/threads.h
        include/allegro5/timer.h
        include/allegro5/tls.h
        include/allegro5/touch_input.h
        include/allegro5/transformations.h
        include/allegro5/utf8.h
        game.c
        game.h
        main.c
        scene_menu.c
        scene_menu.h
        scene_settings.c
        scene_settings.h
        scene_start.c
        scene_start.h
        utility.c
        utility.h)

target_link_libraries(allegro_demo ${CMAKE_SOURCE_DIR}/lib/liballegro_monolith-debug.dll.a)
